--- a/src/main/resources/com/example/huffman/main-view.fxml
+++ b/src/main/resources/com/example/huffman/main-view.fxml
@@ -26,15 +26,13 @@
         <Button layoutX="248.0" layoutY="208.0" mnemonicParsing="false" text="Drzewo" />
         <Label layoutX="156.0" layoutY="57.0" text="Podaj słowo do zakodowania" />
         <Label layoutX="156.0" layoutY="137.0" text="Słowo po zakodowaniu" />
-        <ScrollPane layoutX="14.0" layoutY="249.0" prefHeight="135.0" prefWidth="573.0">
-            <content>
-                <TableView fx:id="tableView" editable="true" prefHeight="132.0" prefWidth="556.0">
-                    <columns>
-                        <TableColumn prefWidth="75.0" text="C1" />
-                        <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                </TableView>
-            </content>
-        </ScrollPane>
+      <TableView fx:id="tableView" layoutX="18.0" layoutY="239.0" prefHeight="147.0" prefWidth="566.0">
+         <columns>
+            <TableColumn fx:id="id" prefWidth="75.0" text="id" />
+            <TableColumn fx:id="character" prefWidth="75.0" text="character" />
+            <TableColumn fx:id="weight" prefWidth="75.0" text="weight" />
+            <TableColumn fx:id="probability" prefWidth="75.0" text="probability" />
+            <TableColumn fx:id="code" prefWidth="75.0" text="code" />
+         </columns></TableView>
     </children>
 </AnchorPane>
