--- a/src/main/resources/com/example/huffman/main-view.fxml
+++ b/src/main/resources/com/example/huffman/main-view.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -28,12 +27,7 @@
         <Label layoutX="156.0" layoutY="137.0" text="Słowo po zakodowaniu" />
         <ScrollPane layoutX="14.0" layoutY="249.0" prefHeight="135.0" prefWidth="573.0">
             <content>
-                <TableView fx:id="tableView" editable="true" prefHeight="132.0" prefWidth="556.0">
-                    <columns>
-                        <TableColumn prefWidth="75.0" text="C1" />
-                        <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                </TableView>
+                <TableView fx:id="tableView" editable="true" prefHeight="132.0" prefWidth="556.0" />
             </content>
         </ScrollPane>
     </children>
