--- a/src/main/resources/com/example/huffman/main-view.fxml
+++ b/src/main/resources/com/example/huffman/main-view.fxml
@@ -10,22 +10,22 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.huffman.Controller">
     <children>
-        <ScrollPane layoutX="386.0" layoutY="14.0" prefHeight="86.0" prefWidth="204.0">
+        <ScrollPane layoutX="193.0" layoutY="14.0" prefHeight="86.0" prefWidth="400.0">
             <content>
-                <TextArea id="textArea1" fx:id="textArea1" prefHeight="200.0" prefWidth="200.0" promptText="asdasd" />
+                <TextArea id="textArea1" fx:id="textArea1" prefHeight="179.0" prefWidth="385.0" />
             </content>
         </ScrollPane>
-        <ScrollPane layoutX="380.0" layoutY="113.0" prefHeight="108.0" prefWidth="195.0">
+        <ScrollPane layoutX="70.0" layoutY="109.0" prefHeight="112.0" prefWidth="523.0">
             <content>
-                <TextArea fx:id="textArea2" prefHeight="200.0" prefWidth="200.0" />
+                <TextArea fx:id="textArea2" prefHeight="183.0" prefWidth="509.0" />
             </content>
         </ScrollPane>
-        <Button fx:id="huffmanButton" layoutX="14.0" layoutY="208.0" mnemonicParsing="false" onAction="#huffmanMethod" text="Huffman" />
-        <Button layoutX="108.0" layoutY="208.0" mnemonicParsing="false" text="FGK" />
-        <Button layoutX="170.0" layoutY="208.0" mnemonicParsing="false" text="Vitter" />
-        <Button layoutX="248.0" layoutY="208.0" mnemonicParsing="false" text="Drzewo" />
-        <Label layoutX="156.0" layoutY="57.0" text="Podaj słowo do zakodowania" />
-        <Label layoutX="156.0" layoutY="137.0" text="Słowo po zakodowaniu" />
+        <Button fx:id="huffmanButton" layoutX="14.0" layoutY="45.0" mnemonicParsing="false" onAction="#huffmanMethod" text="Huffman" />
+        <Button layoutX="88.0" layoutY="45.0" mnemonicParsing="false" text="FGK" />
+        <Button layoutX="12.0" layoutY="75.0" mnemonicParsing="false" text="Vitter" />
+        <Button layoutX="88.0" layoutY="75.0" mnemonicParsing="false" text="Drzewo" />
+        <Label layoutX="18.0" layoutY="20.0" text="Podaj słowo do zakodowania" />
+        <Label layoutX="16.0" layoutY="142.0" text="Wyniki" />
       <TableView fx:id="tableView" layoutX="18.0" layoutY="239.0" prefHeight="147.0" prefWidth="566.0">
          <columns>
             <TableColumn fx:id="id" prefWidth="75.0" text="id" />
