--- a/src/main/resources/com/example/huffman/main-view.fxml
+++ b/src/main/resources/com/example/huffman/main-view.fxml
@@ -8,31 +8,29 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.huffman.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.huffman.Controller">
     <children>
         <ScrollPane layoutX="193.0" layoutY="14.0" prefHeight="86.0" prefWidth="400.0">
             <content>
                 <TextArea id="textArea1" fx:id="textArea1" prefHeight="179.0" prefWidth="385.0" />
             </content>
         </ScrollPane>
-        <ScrollPane layoutX="70.0" layoutY="109.0" prefHeight="112.0" prefWidth="523.0">
+        <ScrollPane layoutX="70.0" layoutY="109.0" prefHeight="280.0" prefWidth="523.0">
             <content>
-                <TextArea fx:id="textArea2" prefHeight="183.0" prefWidth="509.0" />
+                <TextArea fx:id="textArea2" prefHeight="427.0" prefWidth="509.0" />
             </content>
         </ScrollPane>
-        <Button fx:id="huffmanButton" layoutX="14.0" layoutY="45.0" mnemonicParsing="false" onAction="#huffmanMethod" text="Huffman" />
-        <Button layoutX="88.0" layoutY="45.0" mnemonicParsing="false" text="FGK" />
-        <Button layoutX="12.0" layoutY="75.0" mnemonicParsing="false" text="Vitter" />
-        <Button fx:id="drzewo" layoutX="88.0" layoutY="75.0" mnemonicParsing="false" onAction="#drzewo" text="Drzewo" />
-        <Label layoutX="18.0" layoutY="20.0" text="Podaj słowo do zakodowania" />
-        <Label layoutX="16.0" layoutY="142.0" text="Wyniki" />
-      <TableView fx:id="tableView" layoutX="18.0" layoutY="239.0" prefHeight="147.0" prefWidth="566.0">
+        <Button fx:id="huffmanButton" layoutX="26.0" layoutY="70.0" mnemonicParsing="false" onAction="#huffmanMethod" text="Huffman" />
+        <Button fx:id="drzewo" layoutX="103.0" layoutY="70.0" mnemonicParsing="false" onAction="#drzewo" prefHeight="25.0" prefWidth="63.0" text="Drzewo" />
+        <Label layoutX="17.0" layoutY="40.0" text="Ciąg znaków do zakodowania" />
+        <Label layoutX="21.0" layoutY="241.0" text="Wyniki" />
+      <TableView fx:id="tableView" layoutX="17.0" layoutY="417.0" prefHeight="147.0" prefWidth="576.0">
          <columns>
-            <TableColumn fx:id="id" prefWidth="75.0" text="id" />
-            <TableColumn fx:id="character" prefWidth="75.0" text="character" />
-            <TableColumn fx:id="weight" prefWidth="75.0" text="weight" />
-            <TableColumn fx:id="probability" prefWidth="75.0" text="probability" />
-            <TableColumn fx:id="code" prefWidth="75.0" text="code" />
+            <TableColumn fx:id="id" prefWidth="75.0" text="ID (przed sortowaniem)" />
+            <TableColumn fx:id="character" prefWidth="75.0" text="Znak" />
+            <TableColumn fx:id="weight" prefWidth="75.0" text="Waga" />
+            <TableColumn fx:id="probability" prefWidth="75.0" text="Prawdopodobieństwo" />
+            <TableColumn fx:id="code" prefWidth="75.0" text="Kod" />
          </columns></TableView>
     </children>
 </AnchorPane>
